vbnc/vbnc/vbnc/tests/Errors/30311-21.vb
Class T
    Const M_Date As Date = 2UL
End Class